Added announcements page

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                 <i class="fas fa-bars ms-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
+                <h3 style="color: rgb(78, 8, 241);"> WIDATFIL 2022</h3>
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#overview">Overview</a></li>
                     <li class="nav-item"><a class="nav-link" href="#schedule">Schedule</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="#research">Research</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li> -->
-                    <li class="nav-item">
+                    <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
+                    <li class="nav-item"><a class="nav-link" target="_blanck" href="http://icfhr2022.org/index.php">ICFHR2022</a></li> 
+                    <li class="nav-item"><a class="nav-link" href="./updates.html">Announcements</a></li>
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="https://github.com/decile-team"><i
                                 class="fa-brands fa-github"></i></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -148,63 +148,8 @@
         </div>
     </section>
 
-    <section class="page-section" id="projects">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Our Projects</h2>
-                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
-            </div>
-            <div class="projects-card-section">
-                <div class="projects-card">
-                    <div>
-                        <div class="project-title">Indic Document Digitization</div>
-                        <div class="project-description">Previous research in Document Analysis and OCR has focused on
-                            English text, and Indian languages have mainly been ignored. Our purpose is to create
-                            end-to-end document analysis tools for Indic language documents, called Indic Document
-                            Analysis, which can enable effective and accurate OCR and digitization.</div>
-                    </div>
-                    <div class="project-link">
-                        <a href="https://github.com/document-analysis-tools/layout-with-ocr"><i
-                                class="fa-brands fa-github"></i></a>
-                        <a href="https://github.com/document-analysis-tools/layout-with-ocr"><i
-                                class="fa-brands fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="projects-card">
-                    <div>
-                        <div class="project-title">OCR Editor</div>
-                        <div class="project-description">The project aims to develop a user-friendly interface in which
-                            the users can convert scanned images and pdfs to machine-coded text and edit the final
-                            information as needed.</div>
-                    </div>
-                    <div class="project-link">
-                        <a href="https://github.com/document-analysis-tools/ocr-editor"><i
-                                class="fa-brands fa-github"></i></a>
-                        <a href="https://github.com/document-analysis-tools/ocr-editor"><i
-                                class="fa-brands fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="projects-card">
-                    <div>
-                        <div class="project-title">OCR NER Extractor</div>
-                        <div class="project-description">Named Entity Recognition (NER) is a method of information
-                            extraction that is used to acquire important information from unstructured text documents.
-                            In this project, our aim is to develop a NER extractor for scanned medical documents
-                            using NLP techniques.</div>
-                    </div>
-                    <div class="project-link">
-                        <a href="https://github.com/document-analysis-tools/ocr-ner-extractor"><i
-                                class="fa-brands fa-github"></i></a>
-                        <a href="https://github.com/document-analysis-tools/ocr-ner-extractor"><i
-                                class="fa-brands fa-youtube"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Organizers-->
-    <section class="page-section blue-bg" id="organizers">
+    <section class="page-section " id="organizers">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase mb-5">Organizers</h2>
@@ -250,54 +195,42 @@
                 </div> -->
                 
             </div>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <!-- <p class="large text-muted"></p> -->
-                    <!-- <table class = "int_table">
+                    <p class="large text-muted"></p> -->
+                    <table class = "int_table">
                         <thead class="thead_tr">
                           <tr class = "tdth ">
-                            <th>Interns</th>
+                            <th>Organizers</th>
                           </tr>
                         <thead>
                         <tbody class = "tbodytr">
-                          <tr class = "tdth tdthr tbr">
-                            <td>Sagarika Raje</td>
-                          </tr>
-                             <tr class = "tdth tdthr tbr">
-                            <td>Pooja Aryamane</td>
-                          </tr>
-                             <tr class = "tdth tdthr tbr">
-                            <td>Dishant Padalia</td>
-                          </tr>
-                             <tr class = "tdth tdthr tbr">
-                            <td>Sujay Torvi</td>
-                          </tr>
-                             <tr class = "tdth tdthr tbr">
-                            <td>Aditya Motwani</td>
-                          </tr>
-                             <tr class = "tdth tdthr tbr">
-                            <td>Saurabh Baghel</td>
-                          </tr>
-                          <tr class = "tdth tdthr tbr">
-                             <td>Raja Harsh Vardhan Singh</td>
-                          </tr>
-                          <tr class = "tdth tdthr tbr">
-                             <td>Shivani Shenai</td>
-                          </tr>
-                          <tr class = "tdth tdthr tbr">
-                            <td>Diksha Rani</td>
-                          </tr>
+                            <tr class = "tdth tdthr tbr">
+                                <td>Chetan Arora</td>
+                            </tr>
+                            <tr class = "tdth tdthr tbr">
+                                <td>Ravi Kiran S</td>
+                            </tr>
+                            <tr class = "tdth tdthr tbr">
+                                <td>C.V. Jawahar</td>
+                            </tr>
+                            <tr class = "tdth tdthr tbr">
+                                <td>G. S. Lehal</td>
+                            </tr>
+                            <tr class = "tdth tdthr tbr">
+                                <td>Tushar Patnaik</td>
+                            </tr>
                             
                         </tbody>
                     </table> -->
-                <!-- </div> -->
-            <!-- </div> --> -->
+                </div>
+            </div>
         </div>
     </section>
 
 
     <!-- Youtube -->
-    <section class="page-section video bg-light p-5" id="youtube" aria-label="Video Section">
+    <section class="page-section video blue-bg p-5" id="youtube" aria-label="Video Section">
         <div class="container">
             <h2 class="section-heading text-uppercase text-center">Check out our tutorials here!</h2>
             <div class="row d-md-flex mt-5">
@@ -347,15 +280,25 @@
 
     </section>
 
+    <!-- Schedule -->
+    <section class="page-section" id="contactus">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Contact Us</h2>
+                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+            </div>
+        </div>
+    </section>
+
 
     <!-- Research Publications -->
-    <section class="page-section blue-bg" id="research">
+    <!-- <section class="page-section blue-bg" id="research">
         <div class="container">
             <h2 class="section-heading text-uppercase text-center">Research Publications</h2>
             <div id="faqs">
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- JOIN SLACK -->
