Adding announcement dates

--- a/updates.html
+++ b/updates.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>WIDATFIL</title>
+        <title>WIDAFIL2022</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -31,7 +31,7 @@
                 <i class="fas fa-bars ms-1"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
-                <h3 style="color: rgb(78, 8, 241);"> WIDATFIL 2022</h3>
+                <h3 style="color: rgb(8, 8, 124);"> WIDAFIL 2022</h3>
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="./index.html">Overview</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#schedule">Schedule</a></li>
@@ -51,9 +51,46 @@
     <header class="masthead">
         <div id="particles-js"></div>
         <div class="container">
-            <div class="masthead-subheading">Announcements</div>
-            <div class="masthead-heading text-uppercase">
-                To be declared
+            <div class="masthead-subheading">Important Dates</div>
+            <div class="workshop_discussion text-center">
+                <table>
+                    <thead>
+                        <tr>													
+                            <th>Date and Time</th>
+                            <th>Actionable Item</th>
+                        </tr>       
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>23:59, 1<sup>st</sup> Nov 2022</td>
+                            <td>Abstract Submission Deadline</td>
+                        </tr>
+                        <tr>
+                            <td>23:59, 4<sup>th</sup> Nov 2022</td>
+                            <td>Paper Submission Deadline</td>
+                        </tr>
+                        <tr>
+                            <td>23:59, 7<sup>th</sup> Nov 2022</td>
+                            <td>Results Submission</td>
+                        </tr>
+                        <tr>
+                            <td>23:59, 12<sup>th</sup> Nov 2022</td>
+                            <td>Author Notification</td>
+                        </tr>
+                        <tr>
+                            <td>23:59, 15<sup>th</sup> Nov 2022</td>
+                            <td>Camera Ready Paper Due</td>
+                        </tr>
+                        <tr>
+                            <td>23:59, 18<sup>th</sup> Nov 2022</td>
+                            <td>Registration Deadline</td>
+                        </tr>
+                        <tr>
+                            <td>5<sup>th</sup> to 7<sup>th</sup> Dec 2022</td>
+                            <td>Workshop Dates</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </header>
