--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <dt>➼ Web-based Application for Document Analysis Tools</dt>
                 </dl> 
             </div>
-            <div class=""workshop_content">
+            <div class="workshop_content">
                 <p>
                     We will also discuss available datasets or corpora for major Indian languages, 
                     Deep Neural-Network based Computer Vision and Language Models that can be used for various downstream tasks 
@@ -128,24 +128,24 @@
                             <td>To be declared</td>
                             <td>To be declared</td>
                         </tr>
-                        <tr>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                        </tr>
-                        <tr>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                        </tr>
-                        <tr>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                            <td>To be declared</td>
-                        </tr>
+<!--                        <tr>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                        </tr>-->
+<!--                        <tr>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                            <td>To be declared</td>-->
+<!--                        </tr>-->
                     </tbody>
                 </table>
             </div>
@@ -363,6 +363,7 @@
                         </div>
                     </div>
             </div>
+        </div>
         </div>
     </section>
 
