Adding submission instructions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="nav-item"><a class="nav-link" href="#schedule">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link" href="#organizers">Committee</a></li>
                     <li class="nav-item"><a class="nav-link" target="_blanck" href="http://icfhr2022.org/index.php">ICFHR2022</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="./updates.html">Announcements</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./updates.html">Important Dates</a></li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="https://github.com/decile-team"><i
                                 class="fa-brands fa-github"></i></a>
@@ -56,7 +56,7 @@
                 alt="iit-bombay-logo">
             <div class="masthead-subheading">1<sup>st</sup> Workshop on <br><br> Improving Document Analysis <br><br> For Indian Languages</div>
             <div class="masthead-heading text-uppercase">
-                In conjunction with ICFHR 2022, 5<sup>th</sup> to 7<sup>th</sup> December , 2022.
+                In conjunction with ICFHR 2022, 5<sup>th</sup> to 7<sup>th</sup> December, 2022.
                 <!-- Transform document image analysis pipelines for Indic Languages with the full power of OCR and Deep Learning. -->
             </div>
             <a class="btn btn-primary text-uppercase" href="#overview">Explore</a>
