--- a/updates.html
+++ b/updates.html
@@ -37,7 +37,7 @@
                     <li class="nav-item"><a class="nav-link" href="./index.html#schedule">Schedule</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#organizers">Organizers</a></li>
                     <li class="nav-item"><a class="nav-link" target="_blanck" href="http://icfhr2022.org/index.php">ICFHR2022</a></li> 
-                    <li class="nav-item"><a class="nav-link" href="./updates.html">Announcements</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./updates.html">Imporatnt Dates</a></li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="https://github.com/decile-team"><i
                                 class="fa-brands fa-github"></i></a>
@@ -51,7 +51,7 @@
     <header class="masthead">
         <div id="particles-js"></div>
         <div class="container">
-            <div class="masthead-subheading">Important Dates</div>
+            <!-- <div class="masthead-subheading">Important Dates</div> -->
             <div class="workshop_discussion text-center">
                 <table>
                     <thead>
@@ -87,6 +87,20 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            
+            <div>
+                <br><br>
+                <div class="masthead-subheading">Instructions for Submission</div>
+                <br>
+                <div class="workshop_content">
+                    The corresponding paper to be submitted must follow the template <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WtR5Hy5ua71"
+                    target=”_blank” style="text-decoration: none;">here</a> 
+                </div>
+                <div class="workshop_content">
+                   Keep visiting for further clarity and instructions with respect to submissions and subsequent registrations 
+                </div>
+                <p></p>
             </div>
         </div>
     </header>
