Made minor modifications on names

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 <div class="col-lg-6">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/ganeshramakrishnan.png" alt="..." />
-                        <h4>Prof Ganesh Ramakrishnan</h4>
+                        <h4>Ganesh Ramakrishnan</h4>
                         <p class="text-muted">Institute Chair Professor, Department of Computer Science,
                             Professor-in-Charge, Koita Center for Digital Health,
-                            Indian Institute of Bombay
+                            Indian Institute of Technology, Bombay
                             </p>
                         <a class="btn btn-dark btn-social mx-2" target="_blank" href="https://www.cse.iitb.ac.in/~ganesh/"><i class="fa fa-info-circle"></i></a>
                     </div>
@@ -173,10 +173,10 @@
                 <div class="col-lg-6">
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/paragchaudhuri.jpg" alt="..." />
-                        <h4>Prof Parag Chaudhuri</h4>
-                        <p class="text-muted">Prof Parag Chaudhuri,
+                        <h4>Parag Chaudhuri</h4>
+                        <p class="text-muted">
                             Associate Professor,
-                            Indian Institute of Bombay
+                            Indian Institute of Technology, Bombay
                             </p>
                         <a class="btn btn-dark btn-social mx-2" href="https://www.cse.iitb.ac.in/~paragc/"><i class="fa fa-info-circle"></i></a>
                     </div>
