--- a/updates.html
+++ b/updates.html
@@ -34,14 +34,9 @@
                 <h3 style="color: rgb(8, 8, 124);"> WIDAFIL 2022</h3>
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="./index.html">Overview</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./index.html#schedule">Schedule</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./index.html#organizers">Organizers</a></li>
-                    <li class="nav-item"><a class="nav-link" target="_blanck" href="http://icfhr2022.org/index.php">ICFHR2022</a></li> 
                     <li class="nav-item"><a class="nav-link" href="./updates.html">Imporatnt Dates</a></li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/decile-team"><i
-                                class="fa-brands fa-github"></i></a>
-                    </li> -->
+                    <li class="nav-item"><a class="nav-link" href="./index.html#organizers">Committee </a></li>
+                    <li class="nav-item"><a class="nav-link" target="_blanck" href="http://icfhr2022.org/index.php">ICFHR2022</a></li> 
                 </ul>
             </div>
         </div>
@@ -50,40 +45,6 @@
     <!-- Masthead-->
     <header class="masthead">
         <div id="particles-js"></div>
-        <div class="container">
-            <!-- <div class="masthead-subheading">Important Dates</div> -->
-            <div class="workshop_discussion text-center">
-                <table>
-                    <thead>
-                        <tr>													
-                            <th>Date and Time</th>
-                            <th>Actionable Item</th>
-                        </tr>       
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>23:59, 20<sup>th</sup> Oct 2022</td>
-                            <td>Paper Submission Deadline</td>
-                        </tr>
-                        <tr>
-                            <td>23:59, 1<sup>st</sup> Nov 2022</td>
-                            <td>Author Notification</td>
-                        </tr>
-                        <tr>
-                            <td>23:59, 5<sup>th</sup> Nov 2022</td>
-                            <td>Camera Ready Paper Due</td>
-                        </tr>
-                        <tr>
-                            <td>23:59, 10<sup>th</sup> Nov 2022</td>
-                            <td>Registration Deadline</td>
-                        </tr>
-                        <tr>
-                            <td>5<sup>th</sup> to 7<sup>th</sup> Dec 2022</td>
-                            <td>Workshop Dates</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
             
             <div>
                 <br><br>
@@ -98,6 +59,55 @@
                 </div>
                 <p></p>
             </div>
+
+            <!-- Schedule -->
+            <section class="page-section blue-bg" id="schedule">
+                <div class="container">
+                    <div class="text-center">
+                        <h2 class="section-heading text-uppercase" style="padding-bottom: 5%;">Schedule</h2>
+                        <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+                    </div>
+                    <div class="workshop_discussion text-center">
+                        <table>
+                            <thead>
+                                <tr>													
+                                    <th>Event</th>
+                                    <th>Date and Time</th>
+                                    <th>Venue</th>
+                                    <th>Status</th>
+                                </tr>       
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>To be declared</td>
+                                    <td>To be declared</td>
+                                    <td>To be declared</td>
+                                    <td>To be declared</td>
+                                </tr>
+        <!--                        <tr>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                        </tr>-->
+        <!--                        <tr>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                        </tr>-->
+        <!--                        <tr>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                            <td>To be declared</td>-->
+        <!--                        </tr>-->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </section>
+
         </div>
     </header>
 
