Updated UI and hyperlinks

--- a/updates.html
+++ b/updates.html
@@ -33,10 +33,12 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <h3 style="color: rgb(8, 8, 124);"> WIDAFIL 2022</h3>
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Overview</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./updates.html">Imporatnt Dates</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./index.html#organizers">Committee </a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html#overview">Overview</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html#importantdates">Important Dates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./updates.html">Submissions</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html#organizers">Committee</a></li>
                     <li class="nav-item"><a class="nav-link" target="_blanck" href="http://icfhr2022.org/index.php">ICFHR2022</a></li> 
+                    <li class="nav-item"><a class="nav-link" href="./index.html#contactus">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -46,19 +48,7 @@
     <header class="masthead">
         <div id="particles-js"></div>
             
-            <div>
-                <br><br>
-                <div class="masthead-subheading">Instructions for Submission</div>
-                <br>
-                <div class="workshop_content">
-                    The corresponding paper to be submitted must follow the template <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WtR5Hy5ua71"
-                    target=”_blank” style="text-decoration: none;">here</a> 
-                </div>
-                <div class="workshop_content">
-                   Keep visiting for further clarity and instructions with respect to submissions and subsequent registrations 
-                </div>
-                <p></p>
-            </div>
+            
 
             <!-- Schedule -->
             <section class="page-section blue-bg" id="schedule">
