added venkat website

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <img class="mx-auto rounded-circle" src="assets/img/team/venkats.jpg" alt="..." />
                         <h4>Dr Venkatapathy Subramanian</h4>
                         <p class="text-muted">Senior Project Research Scientist</p>
-                        <a class="btn btn-dark btn-social mx-2" target="_blank" href="https://www.linkedin.com/in/venkatapathy-subramanian/"><i class="fab fa-github"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" target="_blank" href="https://sites.google.com/view/venkatapathy"><i class="fab fa-info-circle"></i></a>
                     </div>
                 </div>
                 
