recent changes such as abstract only submission

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 alt="iit-bombay-logo">
             <div class="masthead-subheading">1<sup>st</sup> Workshop on <br><br> Improving Document Analysis <br><br> For Indian Languages</div>
             <div class="masthead-heading text-uppercase">
-                In conjunction with ICFHR 2022, 5<sup>th</sup> to 7<sup>th</sup> December, 2022.
+                5<sup>th</sup> to 7<sup>th</sup> December, 2022- In conjunction with <a href='http://icfhr2022.org/index.php' target='_blank'>ICFHR 2022</a>
                 <!-- Transform document image analysis pipelines for Indic Languages with the full power of OCR and Deep Learning. -->
             </div>
             <a class="btn btn-primary text-uppercase" href="#overview">Explore</a>
@@ -115,12 +115,20 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>23:59, 20<sup>th</sup> Oct 2022</td>
-                            <td>Paper Submission Deadline</td>
+                            <td>5th<sup>th</sup> November 2022 Anywhere on Earth(AoE)</td>
+                            <td>Abstract Submission</td>
                         </tr>
                         <tr>
-                            <td>23:59, 1<sup>st</sup> Nov 2022</td>
+                            <td>12<sup>th</sup> November 2022 AoE</td>
                             <td>Author Notification</td>
+                        </tr>
+                        <tr>
+                            <td>4<sup>th</sup> December 2022 AoE</td>
+                            <td>Workshop Date</td>
+                        </tr>
+                        <tr>
+                            <td>24<sup>th</sup> December 2022 AoE</td>
+                            <td>CAMERA-READY DEADLINE for POST-WORKSHOP PROCEEDINGS</td>
                         </tr>
                         <tr>
                             <td>23:59, 5<sup>th</sup> Nov 2022</td>
@@ -130,10 +138,7 @@
                             <td>23:59, 10<sup>th</sup> Nov 2022</td>
                             <td>Registration Deadline</td>
                         </tr>
-                        <tr>
-                            <td>5<sup>th</sup> to 7<sup>th</sup> Dec 2022</td>
-                            <td>Workshop Dates</td>
-                        </tr>
+                      
                     </tbody>
                 </table>
             </div>
