--- a/index.html
+++ b/index.html
@@ -130,14 +130,7 @@
                             <td>24<sup>th</sup> December 2022 AoE</td>
                             <td>CAMERA-READY DEADLINE for POST-WORKSHOP PROCEEDINGS</td>
                         </tr>
-                        <tr>
-                            <td>23:59, 5<sup>th</sup> Nov 2022</td>
-                            <td>Camera Ready Paper Due</td>
-                        </tr>
-                        <tr>
-                            <td>23:59, 10<sup>th</sup> Nov 2022</td>
-                            <td>Registration Deadline</td>
-                        </tr>
+                        
                       
                     </tbody>
                 </table>
@@ -158,6 +151,10 @@
             <div class="workshop_content">
                 ➼ All WIDAFIL 2022 papers should be submitted via the Microsoft CMT Conference System. Please follow the instructions on the submission website carefully, to ensure that your paper has been submitted correctly. Final submission to be done <a href="https://cmt3.research.microsoft.com/WIDAFIL2022/Submission/Index"
                 target=”_blank” style="text-decoration: none;">here</a>
+            </div>
+            <div class="workshop_content ">
+               <h6> ➼ Only abstract to be submitted for the workshop. Paper submission for Post-Workshop proceedings comes later. Check <a href="#importantdates" style="text-decoration: none;">Important Dates</a> section.
+            </h6>
             </div>
             <div class="workshop_content">
                 ➼ Papers should be formatted according to the instructions and style files provided by Springer Overleaf Template <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WtR5Hy5ua71"
