Modifying few submission instructions

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 target=”_blank” style="text-decoration: none;">here</a>
             </div>
             <div class="workshop_content ">
-               <h6> ➼ Only abstract to be submitted for the workshop. Paper submission for Post-Workshop proceedings comes later. Check <a href="#importantdates" style="text-decoration: none;">Important Dates</a> section.
-            </h6>
+               <b> ➼ Only abstract to be submitted for the workshop. Paper submission for Post-Workshop proceedings comes later. Check <a href="#importantdates" style="text-decoration: none;">Important Dates</a> section.
+            </b>
             </div>
             <div class="workshop_content">
                 ➼ Papers should be formatted according to the instructions and style files provided by Springer Overleaf Template <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WtR5Hy5ua71"
@@ -167,16 +167,22 @@
                  ➼ WIDAFIL 2022 will follow a double-blind review process. Authors should not include their names or affiliations anywhere in the manuscript.
              </div>
             <div class="workshop_content">
+                 ➼ Each abstract submission requires at least one author to have performed an <b>ICFHR 2022 onsite registration as author or student whichever is suitable for the purpose.</b>
+             </div>
+            <div class="workshop_content">
+                 ➼ ICFHR 2022 registration details for the same are available <a href="http://icfhr2022.org/registration.php" target="_blank" style="text-decoration: none;">here</a>
+             </div>
+            <div class="workshop_content">
                  ➼ Reviewer names will also not be visible to authors.
              </div>
              <div class="workshop_content">
                  ➼ Both submissions of new papers and updates of already submitted ones are welcome until the submission deadline.
              </div>
              <div class="workshop_content">
-                 ➼ At least one author of each accepted paper MUST register the paper at full-rate. Papers without a confirmed registration will be withdrawn by the conference organizers.
+                 ➼ <b>At least one author of each accepted paper MUST register the paper at full-rate.</b> Papers without a confirmed registration will be withdrawn by the conference organizers.
              </div>
              <div class="workshop_content">
-                 ➼ Papers accepted for the conference will be allocated up to 8 pages in the proceedings, including references. Submissions are expected to be 6-8 pages long.
+                 ➼ Papers accepted for the conference will be allocated up to 8 pages in the proceedings, including references. <b>Submissions are expected to be 6-8 pages long.</b>
              </div>
             <div class="workshop_content">
                 ➼ The author response phase will take place after the first round of reviews. It is optional and meant to provide authors with an opportunity to correct factual errors in a review, or to supply additional information as requested by reviewers. It is not intended as an opportunity to add new contributions.
