Changing workshop date

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 alt="iit-bombay-logo">
             <div class="masthead-subheading">1<sup>st</sup> Workshop on <br><br> Improving Document Analysis <br><br> For Indian Languages</div>
             <div class="masthead-heading text-uppercase">
-                5<sup>th</sup> to 7<sup>th</sup> December, 2022- In conjunction with <a href='http://icfhr2022.org/index.php' target='_blank'>ICFHR 2022</a>
+                4<sup>th</sup> December, 2022- In conjunction with <a href='http://icfhr2022.org/index.php' target='_blank'>ICFHR 2022</a>
                 <!-- Transform document image analysis pipelines for Indic Languages with the full power of OCR and Deep Learning. -->
             </div>
             <a class="btn btn-primary text-uppercase" href="#overview">Explore</a>
