--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/cvjawahar.jpg" alt="..." />
+                        <img class="mx-auto rounded-circle" src="assets/img/team/cvjawahar.jpeg" alt="..." />
                         <h4>C V Jawahar</h4>
                         <p class="text-muted">
                             Professor, IIIT Hyderabad
